fixed mobile menu overflow

--- a/css/style.css
+++ b/css/style.css
@@ -400,6 +400,11 @@ i.fas {
 }
 
 @media only screen and (max-width: 900px) {
+  #main-nav {
+    width: 100%;
+    overflow: hidden;
+  }
+
   #main-nav-content {
     display: flex;
     flex-direction: column;
@@ -411,6 +416,7 @@ i.fas {
   #main-nav .container {
     padding: 0;
     margin: 0;
+    width: 100vw;
   }
 
   .strip #container {
